[tool.poetry]
name = "awscli-plugin-yubikeytotp"
version = "0.1.0"
description = ""
authors = ["Thomas Liebetraut <thomas@tommie-lie.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
botocore = "^1.14.14"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
