[tool.poetry]
name = "awscli-plugin-yubikeytotp"
version = "1.1.0"
description = ""
authors = ["Thomas Liebetraut <thomas@tommie-lie.de>"]
license = "GPL-3.0-or-later"

repository = "https://github.com/tommie-lie/awscli-plugin-yubikeytotp"
documentation = "https://github.com/tommie-lie/awscli-plugin-yubikeytotp/blob/master/README.md"

readme = "README.md"

keywords = ["aws", "aws-cli", "boto3", "yubikey"]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators"
]


[tool.poetry.dependencies]
python = "^3.7,<3.10"
botocore = "^1.14.14"
yubikey-manager = "<4"
cryptography = "<3.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
awscli = { version = "^1"  }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
